# oscilloscope

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt
buf_connect_server/: CMakeLists.txt
buf_connect_server/cmake/: FetchDependencies.cmake
buf_connect_server/include/buf_connect_server/: server.hpp
buf_connect_server/include/buf_connect_server/auth/: jwt.hpp  middleware.hpp  stream_token.hpp  user_store.hpp
buf_connect_server/include/buf_connect_server/config/: config_loader.hpp  config_server.hpp  nginx_writer.hpp  server_config.hpp
buf_connect_server/include/buf_connect_server/connect/: frame_codec.hpp  protocol.hpp  request.hpp  response_writer.hpp
buf_connect_server/include/buf_connect_server/http2/: listener.hpp  router.hpp
buf_connect_server/include/buf_connect_server/services/: admin_handler.hpp  auth_handler.hpp  session_handler.hpp
buf_connect_server/include/buf_connect_server/session/: session_event.hpp  session_manager.hpp
buf_connect_server/include/buf_connect_server/transport/: control_plane.hpp  data_plane.hpp
buf_connect_server/proto/: CMakeLists.txt  buf.gen.yaml  buf_connect_server.proto
buf_connect_server/src/: server.cpp
buf_connect_server/src/auth/: jwt.cpp  middleware.cpp  stream_token.cpp  user_store.cpp
buf_connect_server/src/config/: config_loader.cpp  config_server.cpp  nginx_writer.cpp
buf_connect_server/src/connect/: frame_codec.cpp  protocol.cpp  request.cpp  response_writer.cpp
buf_connect_server/src/http2/: listener.cpp  router.cpp
buf_connect_server/src/services/: admin_handler.cpp  auth_handler.cpp  session_handler.cpp
buf_connect_server/src/session/: session_manager.cpp
buf_connect_server/src/transport/: control_plane.cpp  data_plane.cpp
buf_connect_server/tests/: CMakeLists.txt
buf_connect_server/tests/auth/: test_jwt.cpp  test_stream_token.cpp  test_user_store.cpp
buf_connect_server/tests/config/: test_config_loader.cpp
buf_connect_server/tests/connect/: test_frame_codec.cpp  test_response_writer.cpp
buf_connect_server/tests/integration/: test_streaming_rpc.cpp  test_unary_rpc.cpp
buf_connect_server/tests/session/: test_session_manager.cpp
cmake/: aarch64-toolchain.cmake  cjson.cmake  cxxopts.cmake  libwebsockets.cmake  spdlog.cmake
cmake/templates/: client.desktop.in  installscript_linux.qs.in  linux_config.xml.in  linux_package.xml.in
cmake/version/: git_vars.ps1  git_vars.sh  version.hpp.in
control_panel_web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
control_panel_web/src/: App.module.css  App.tsx  index.css  main.tsx  vite-env.d.ts
control_panel_web/src/api/: configClient.ts  statusClient.ts
control_panel_web/src/components/: Button.module.css  Button.tsx  FormField.module.css  FormField.tsx  Modal.module.css  Modal.tsx  PanelHeader.module.css  PanelHeader.tsx  Sidebar.module.css  Sidebar.tsx  TogglePill.tsx
control_panel_web/src/features/_shared/: PanelComponents.tsx
control_panel_web/src/features/auth/: AuthSettingsPanel.tsx
control_panel_web/src/features/log/: LogSettingsPanel.tsx
control_panel_web/src/features/metrics/: MetricsPanel.tsx  MetricsSettingsPanel.tsx
control_panel_web/src/features/network/: NetworkSettingsPanel.tsx
control_panel_web/src/features/session/: SessionSettingsPanel.tsx  SessionsAndUsersPanel.tsx
control_panel_web/src/features/status/: StatusPanel.tsx
control_panel_web/src/features/streaming/: StreamingSettingsPanel.tsx
control_panel_web/src/features/users/: UserManagementPanel.tsx
control_panel_web/src/hooks/: useConfig.ts
docker/: oscilloscope_build_image.Dockerfile  oscilloscope_build_image_base.Dockerfile
nginx/: gen-selfsigned-cert.sh  oscilloscope.conf
osc_qml/: OscView.qml  OscWidget.qml  OscilloscopePanelBottom.qml  OscilloscopePanelTop.qml
oscilloscope_backend/: CMakeLists.txt
oscilloscope_backend/src/: main.cpp
oscilloscope_backend/src/hardware/: adc_reader.cpp  adc_reader.hpp  dat_file_reader.cpp  dat_file_reader.hpp
oscilloscope_backend/src/services/: archive_service_impl.cpp  archive_service_impl.hpp  oscilloscope_service_impl.cpp  oscilloscope_service_impl.hpp
oscilloscope_interface/: CMakeLists.txt  buf.gen.yaml  buf.yaml  oscilloscope_interface.proto
oscilloscope_web/: buf.gen.yaml  index.html  package.json  tsconfig.app.json  vite.config.ts
oscilloscope_web/src/: main.tsx
oscilloscope_web/src/app/: App.tsx  AuthGuard.tsx  router.tsx
oscilloscope_web/src/app/styles/: global.css
oscilloscope_web/src/entities/auth/: authStore.ts
oscilloscope_web/src/entities/oscilloscopeSettings/: settingsStore.ts
oscilloscope_web/src/entities/spectrogram/: spectrogramStore.ts
oscilloscope_web/src/entities/waveform/: waveformStore.ts
oscilloscope_web/src/features/auth/: useLogin.ts  useRefreshToken.ts  useRenewCallToken.ts  useTakeOver.ts
oscilloscope_web/src/features/data-stream/: useDataStream.ts  useSpectrogramStream.ts
oscilloscope_web/src/features/oscilloscope-settings/: useOscilloscopeSettings.ts
oscilloscope_web/src/features/session/: useSession.ts
oscilloscope_web/src/pages/login/: LoginPage.module.css  LoginPage.tsx
oscilloscope_web/src/pages/oscilloscope/: OscilloscopePage.module.css  OscilloscopePage.tsx
oscilloscope_web/src/shared/api/: transport.ts
oscilloscope_web/src/shared/config/: env.ts
oscilloscope_web/src/shared/lib/: jwtUtils.ts  ringBuffer.ts
oscilloscope_web/src/shared/ui/: Button.tsx  Spinner.tsx  index.ts
oscilloscope_web/src/widgets/MeasurementsStubWidget/: MeasurementsStubWidget.module.css  MeasurementsStubWidget.tsx
oscilloscope_web/src/widgets/TriggerStubWidget/: TriggerStubWidget.module.css  TriggerStubWidget.tsx
oscilloscope_web/src/widgets/oscilloscope/: OscWidget.module.css  OscWidget.tsx
oscilloscope_web/src/widgets/oscilloscope-canvas/: InteractionOverlay.module.css  InteractionOverlay.tsx  OscilloscopeCanvas.module.css  OscilloscopeCanvas.tsx  PanelBottom.module.css  PanelBottom.tsx  PanelTop.module.css  PanelTop.tsx
oscilloscope_web/src/widgets/settings-curtain/: SettingsCurtain.module.css  (+1 more)
(+15 files in other folders)
